Split CLAUDE.md into contextual map structure